# robomath-py

./: README.md  main.py  pyproject.toml
robomath/: __init__.py  _types.py  _utils.py  kinematics.py
robomath/_core/: se2.py  se3.py  so2.py  so3.py
robomath/groups/: SE2.py  SE3.py  SO2.py  SO3.py  _base.py
robomath/spatial/: twist.py  wrench.py
robomath/tangent/: se3.py  so3.py
solutions/: ch2.py  ch3.py  ch4.py
src/: c_space.py  kinematics.py  rigid_body.py
