[project]
name = "robomath"
version = "0.1.0"
description = "My own implementation of robotics maths from 1st principles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "modern-robotics>=1.1.1",
    "numpy>=2.2.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
