[project]
name = "robomath"
version = "2.5.2026"
description = "Implementation of robotics maths from 1st principles"
authors = [{name = "Tumin", email = "contact.tumins@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "modern-robotics>=1.1.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["robomath*"]
